Fix spacing for form items

--- a/src/style.css
+++ b/src/style.css
@@ -46,6 +46,7 @@ form {
   display: flex;
   flex-direction: column;
   gap: 10px;
+  margin-top: 1em;
 }
 
 form input {
